--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,17 @@
     padding: 5px;
     border-style: double;
 }
+
+.letter{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 75px;
+    height: 75px;
+    font-size: 50px;
+    border: thick solid black;
+    margin: 5px;
+
+}
